--- a/index.html
+++ b/index.html
@@ -1,10 +1,131 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Basic Site</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TODO</title>
+    <link rel="stylesheet" href="/Assets/css/styles.css">
+    <!-- Slider image imports -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="ba-slider.css" rel="stylesheet" />
+    <script src="ba-slider.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome to My Basic Site</h1>
-    <p>This is a basic HTML site.</p>
+    <header>
+        <div class="icon">
+            <img src="icon.png" alt="Icon">
+        </div>
+        <div class="header-buttons">
+            <button>Button 1</button>
+            <button>Button 2</button>
+            <button>Button 3</button>
+        </div>
+    </header>
+    <main>
+        <div class="title-container"> 
+            <img src="/Assets/downloads/temp.jpg" alt="temp">
+        </div>
+
+        <div class="stats-container"> <!--TODO:  MAKE STACK WHEN SCREEN SMALL -->
+            <div class="fact-container">
+                <img src="/Assets/downloads/temp.jpg" alt="temp">
+                <h3>Experienced</h3>
+            </div>
+            <div class="fact-container">
+                <img src="/Assets/downloads/temp.jpg" alt="temp">
+                <h3>Professional</h3>
+            </div>
+            <div class="fact-container">
+                <img src="/Assets/downloads/temp.jpg" alt="temp">
+                <h3>Family Owned</h3>
+            </div>
+        </div>
+
+        <div class="services-container"><!-- TODO: HAVE BUTTON TRIGGER POP UP FOR SENDING EMAIL QUOTE -->
+            <h2>WE HAVE LOTS OF NICE PROGRAMS</h2>
+            <hr>
+            <h1>OUR PROGRAMS ARE 6 STEPS TO completely</h1>
+            <div class="services-button-container">
+                <div class="circle-content">
+                    <img src="/Assets/downloads/temp.jpg" alt="temp" class="service-image">
+                    <p class="service-text">Know what's best for you and your lawn by submitting a quote request.</p>
+                    <button class="quote-button">REQUEST QUOTE</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="about-container"> <!-- TODO: Replace text with company, when stretch add image on right side -->
+            <h3>WHO WE ARE</h3>
+            <hr>
+            <h1>The Farison Lawn Care Guarantee</h1>
+            <p>All professional lawn treatment programs from Farison Lawn Care feature free service 
+                calls and estimates. In addition, we are committed to using only the highest quality 
+                lawn and plant care products while also featuring fertilizer and spray programs that 
+                are completely guaranteed. We proudly serve across Louisville, Kentucky, and 
+                Clarksville, Indiana, along with neighboring areas such as Mt. Washington (KY), 
+                La Grange (KY), Prospect (KY), Goshen (KY), Sellersburg (IN), and Jeffersonville 
+                (IN). Farison Lawn Care has the highest regard for all of our customers; we want you 
+                to be completely satisfied with all the services we provide.</p>
+            <h2>GIVE THE PROFESSIONALS AT FARISON LAWN CARE A CALL 
+                TODAY FOR A FREE AND FRIENDLY ESTIMATE.</h2>
+            <button>READ MORE</button>
+        </div>
+
+        <div class="images-container">
+            <div class="comparison-slider-wrapper">
+                <div id="ba-slider" class="comparison-slider">
+                        <div class="overlay">text</div>
+                        <img src="/Assets/downloads/lawn1.webp"/>
+                    <div class="resize">
+                        <div class="overlay">text</div>
+                        <img src="/Assets/downloads/lawn2.webp"/>
+                    </div>
+                    <div class="divider"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="area-container"> <!-- TODO: ADD HIGHLIGHTED MAP OF AREAS -->
+            <div class="area-text-container">
+            <h2>OUR LOCATION</h2>
+            <hr>
+            <h1>Service Areas</h1>
+            <h3>IF YOU HAVE ANY QUESTIONS OR ARE NOT SURE IF WE PROVIDE SERVICE IN YOUR AREA PLEASE FEEL FREE TO GIVE US A CALL</h3>
+            
+            </div>
+            <img src="/Assets/downloads/map.png" alt="temp">
+        </div>
+
+        <div class="footer-container"> <!-- TODO: SWAP OUT FOR BUSINESS INFO -->
+            <footer>
+                <div class="footer-content">
+                    <div class="footer-section">
+                        <h3>About Us</h3>
+                        <p>Brief description of your company or website.</p>
+                    </div>
+                    <div class="footer-section">
+                        <h3>Contact</h3>
+                        <p>Email: info@example.com</p>
+                        <p>Phone: (123) 456-7890</p>
+                    </div>
+                    <div class="footer-section">
+                        <h3>Follow Us</h3>
+                        <a href="#">Facebook</a>
+                        <a href="#">Twitter</a>
+                        <a href="#">Instagram</a>
+                    </div>
+                </div>
+                <div class="footer-bottom">
+                    <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+                </div>
+            </footer>
+        </div>
+    </main>
+    <script>
+        $(document).ready(function () {
+            baSlider("#ba-slider");
+        });
+    </script>
 </body>
 </html>
