--- a/index.html
+++ b/index.html
@@ -14,30 +14,46 @@
 <body>
     <header>
         <div class="icon">
-            <img src="icon.png" alt="Icon">
+            <img src="/Assets/downloads/header1.png" alt="Icon">
         </div>
         <div class="header-buttons">
-            <button>Button 1</button>
-            <button>Button 2</button>
-            <button>Button 3</button>
+            <button>Request Quote</button>
+            <button>Pay</button>
         </div>
     </header>
     <main>
-        <div class="title-container"> 
-            <img src="/Assets/downloads/temp.jpg" alt="temp">
+        <div class="title-container">
+            <div class="background-image">
+                <img src="/Assets/downloads/title3.png" alt="background">
+            </div>
+            <div class="content-overlay">
+                <div class="main-content">
+                    <h1>The Grass is Greener</h1>
+                    <h2>Family Owned Since 2020</h2>
+                    <button class="cta-button">Request Quote</button>
+                </div>
+                <div class="bottom-content">
+                    <div class="bottom-text">
+                        <p>THE FARISON LAWN CARE GUARANTEE</p>
+                    </div>
+                    <div class="bottom-image">
+                        <img src="/Assets/downloads/title1.png" alt="verified">
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="stats-container"> <!--TODO:  MAKE STACK WHEN SCREEN SMALL -->
             <div class="fact-container">
-                <img src="/Assets/downloads/temp.jpg" alt="temp">
+                <img src="/Assets/downloads/stats3.png" alt="temp">
                 <h3>Experienced</h3>
             </div>
             <div class="fact-container">
-                <img src="/Assets/downloads/temp.jpg" alt="temp">
+                <img src="/Assets/downloads/stats2.png" alt="temp">
                 <h3>Professional</h3>
             </div>
             <div class="fact-container">
-                <img src="/Assets/downloads/temp.jpg" alt="temp">
+                <img src="/Assets/downloads/stats1.png" alt="temp">
                 <h3>Family Owned</h3>
             </div>
         </div>
@@ -48,7 +64,7 @@
             <h1>OUR PROGRAMS ARE 6 STEPS TO completely</h1>
             <div class="services-button-container">
                 <div class="circle-content">
-                    <img src="/Assets/downloads/temp.jpg" alt="temp" class="service-image">
+                    <img src="/Assets/downloads/services1.png" alt="temp" class="service-image">
                     <p class="service-text">Know what's best for you and your lawn by submitting a quote request.</p>
                     <button class="quote-button">REQUEST QUOTE</button>
                 </div>
@@ -88,13 +104,14 @@
 
         <div class="area-container"> <!-- TODO: ADD HIGHLIGHTED MAP OF AREAS -->
             <div class="area-text-container">
-            <h2>OUR LOCATION</h2>
-            <hr>
-            <h1>Service Areas</h1>
-            <h3>IF YOU HAVE ANY QUESTIONS OR ARE NOT SURE IF WE PROVIDE SERVICE IN YOUR AREA PLEASE FEEL FREE TO GIVE US A CALL</h3>
-            
+                <h2>OUR LOCATION</h2>
+                <hr>
+                <h1>Service Areas</h1>
+                <h3>IF YOU HAVE ANY QUESTIONS OR ARE NOT SURE IF WE PROVIDE SERVICE IN YOUR AREA PLEASE FEEL FREE TO GIVE US A CALL</h3>
             </div>
-            <img src="/Assets/downloads/map.png" alt="temp">
+            <div class="area-img-container">
+                <img src="/Assets/downloads/map.png" alt="temp">
+            </div>
         </div>
 
         <div class="footer-container"> <!-- TODO: SWAP OUT FOR BUSINESS INFO -->
