Fixed slider sizing complaint

--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
         </div>
 
         <div class="images-container">
+            <h1>Drag Slider Left or Right</h1>
+            <hr>
             <div class="comparison-slider-wrapper">
                 <div id="ba-slider" class="comparison-slider">
-                        <div class="overlay">text</div>
-                        <img src="/Assets/downloads/lawn1.webp"/>
+                    <img src="/Assets/downloads/lawn6.png" alt="After"/>
                     <div class="resize">
-                        <div class="overlay">text</div>
-                        <img src="/Assets/downloads/lawn2.webp"/>
+                        <img src="/Assets/downloads/lawn5.png" alt="Before"/>
                     </div>
                     <div class="divider"></div>
                 </div>
             </div>
         </div>
-
+        
         <div class="area-container"> <!-- TODO: ADD HIGHLIGHTED MAP OF AREAS -->
             <div class="area-text-container">
                 <h2>OUR LOCATION</h2>
