missing images added for imagespage styling

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </div>
         <div class="header-buttons">
             <nav>
-                <a href="quoteForm.html">Request Quote</a>
+                <a href="quoteForm.html">Quote</a>
             </nav>
             <nav>
-                <a href="">Pay</a>
+                <a href="images.html">Images</a>
             </nav>
         </div>
     </header>
@@ -93,7 +93,7 @@
                 to be completely satisfied with all the services we provide.</p>
             <h2>GIVE THE PROFESSIONALS AT LAWN CARE A CALL 
                 TODAY FOR A FREE AND FRIENDLY ESTIMATE.</h2>
-                
+
             <button id="popupButton">READ MORE</button>
 
             <div class="popup-overlay" id="popupOverlay">
