--- a/quoteForm.html
+++ b/quoteForm.html
@@ -18,7 +18,7 @@
                 <a href="index.html">Home</a>
             </nav>
             <nav>
-                <a href="">Pay</a>
+                <a href="images.html">Images</a>
             </nav>
         </div>
     </header>
